File: components/nexus-capability/src/test/java/org/sonatype/nexus/capability/condition/internal/CapabilityHasNoDuplicatesConditionTest.java